# sdig

./: AUTHORS  ChangeLog  configure.ac  sdig.conf.5
.github/workflows/: codeql.yml
src/: .gitignore  common.h  query.c  snmpget.c  snmpget.h
trunk/: ChangeLog  NEWS  TIPS  TODO  autogen.sh  sdig.8
trunk/include/: config.h.in
trunk/src/: Makefile.am  config-sdig.h  config.c  output.c  output.h  query.c  query.h  sdig.c  sdig.h
